# KinectAzureCapture

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project
include/: DirectoryConfig.h  KinectCapture.h  Vector.h  captureRGBD.h
src/: CMakeLists.txt  KinectCapture.cpp  captureRGBD.cpp  main.cpp
